name:                bang
version:             0.1.0.0
synopsis:            A fun little language to explore building a compiler. Again.
homepage:            http://github.com/acw/bang
license:             BSD3
license-file:        LICENSE
author:              Adam Wick <awick@uhsure.com>
maintainer:          Adam Wick <awick@uhsure.com>

category:            Development
build-type:          Simple
cabal-version:       >=1.10


executable bang
  main-is:             Main.hs
  build-depends:
                       array                >= 0.5.1.0 && < 0.7,
                       base                 >= 4.8     && < 4.9,
                       bytestring           >= 0.10    && < 0.11,
                       lens                 >= 4.14    && < 4.18,
                       monadLib             >= 3.7.3   && < 3.9,
                       optparse-applicative >= 0.12.1  && < 0.14,
                       text                 >= 1.2.2.1 && < 1.4
  hs-source-dirs:      src
  build-tools:         alex, happy
  ghc-options:         -Wall
  default-language:    Haskell2010
  other-extensions:    CPP,
                       DeriveDataTypeable,
                       DeriveFunctor,
                       GeneralizedNewtypeDeriving,
                       MagicHash,
                       MultiParamTypeClasses,
                       OverloadedStrings,
                       TemplateHaskell
  other-modules:
                       Bang.CommandLine,
                       Bang.Syntax.Lexer,
                       Bang.Syntax.Location,
                       Bang.Syntax.Name,
                       Bang.Syntax.Token,
                       Paths_bang
  
