name:                bang
version:             0.1.0.0
synopsis:            A fun little language to explore building a compiler. Again.
homepage:            http://github.com/acw/bang
license:             BSD3
license-file:        LICENSE
author:              Adam Wick <awick@uhsure.com>
maintainer:          Adam Wick <awick@uhsure.com>

category:            Development
build-type:          Simple
cabal-version:       >= 1.10


executable bang
  main-is:             Main.hs
  build-depends:
                       array,
                       base,
                       bytestring,
                       containers,
                       lens,
                       llvm-pretty,
                       monadLib,
                       optparse-applicative,
                       pretty,
                       text
  hs-source-dirs:      src
  build-tools:         alex, happy
  ghc-options:         -Wall
  default-language:    Haskell2010
  other-extensions:    CPP,
                       DeriveDataTypeable,
                       DeriveFunctor,
                       GeneralizedNewtypeDeriving,
                       MagicHash,
                       MultiParamTypeClasses,
                       OverloadedStrings,
                       TemplateHaskell
  other-modules:
                       Bang.CommandLine,
                       Bang.Syntax.Lexer,
                       Bang.Syntax.Location,
                       Bang.Syntax.Name,
                       Bang.Syntax.Parser,
                       Bang.Syntax.Token,
                       Paths_bang
  
