name:                bang
version:             0.1.0.0
synopsis:            A fun little language to explore building a compiler. Again.
homepage:            http://github.com/acw/bang
license:             BSD3
license-file:        LICENSE
author:              Adam Wick <awick@uhsure.com>
maintainer:          Adam Wick <awick@uhsure.com>

category:            Development
build-type:          Simple
cabal-version:       >= 1.10


executable bang
  main-is:             Main.hs
  build-depends:
                       array                >= 0.5.1.1  && < 0.9,
                       base                 >= 4.7      && < 5.0,
                       bytestring           >= 0.10.6   && < 0.13,
                       containers           >= 0.5.4    && < 0.8,
                       GraphSCC             >= 1.0.4    && < 1.4,
                       lens                 >= 4.14     && < 4.16,
                       llvm-pretty          >= 0.4.0.1  && < 0.8,
                       optparse-applicative >= 0.12.1.0 && < 0.15,
                       pretty               >= 1.1.3.3  && < 1.4,
                       text                 >= 1.2.2.1  && < 1.5
  hs-source-dirs:      src
  build-tools:         alex, happy
  ghc-options:         -Wall
  default-language:    Haskell2010
  other-extensions:    CPP,
                       DeriveDataTypeable,
                       DeriveFunctor,
                       FlexibleInstances,
                       GeneralizedNewtypeDeriving,
                       MagicHash,
                       MultiParamTypeClasses,
                       OverloadedStrings,
                       TemplateHaskell,
                       UndecidableInstances
  other-modules:
                       Bang.CommandLine,
                       Bang.Syntax.Lexer,
                       Bang.Syntax.Location,
                       Bang.Syntax.Name,
                       Bang.Syntax.Parser,
                       Bang.Syntax.Token,
                       Paths_bang
  
